--- a/synerg-tech-party-01.html
+++ b/synerg-tech-party-01.html
@@ -111,8 +111,8 @@
                         <ul>
                             <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="https://github.com/synerGTech">Github</a></li>
+                            <li><a href="http://www.cse.iitb.ac.in/synerg/doku.php">cse.iitb</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
